--- a/index.html
+++ b/index.html
@@ -229,7 +229,7 @@
 <a id="Контакты"></a><section id="contact" class="section section--contact">
     <div class="container">
       <h2 class="section__title">Контакты</h2>
-      <p>Автор: <a href="#" class="link">dropliza</a> · Email: <a href="epnikiforova@edu.hse.ru" class="link">epnikiforova@edu.hse.ru</a></p>
+      <p>Автор: <a href="https://t.me/dropliza" class="link">dropliza</a> · Email: <a href="https://mail.360.yandex.ru/touch/" class="link">epnikiforova@edu.hse.ru</a></p>
     </div>
   </section>
 </main>
